--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>RPS</title>
     <link rel="stylesheet" href="styles/main.css">
+    <!--<script src="src/app.js" charset="utf-8"></script>-->
 </head>
 <body>
 <div class="rps-wrapper">
@@ -18,6 +19,20 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
+
+    <p>
+        X: <span id="x-value"></span>
+    </p>
+    <p>
+        Y: <span id="y-value"></span>
+    </p>
+
+    <p>
+        COLOR: <span id="color"></span>
+    </p>
+
+    <div class="grid"></div>
+
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
