implemented pre- join room thingy

--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,6 @@
             <button id="say">Say</button>
         </form>
 
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
     </div>
 
     <p>
@@ -32,6 +29,8 @@
     </p>
 
     <div class="grid"></div>
+
+    <button id="room1">ROOM 1</button>
 
 </div>
 
