players are able to take turns

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 <div class="rps-wrapper">
+    <button id="room1">ROOM 1</button>
+    <button id="room2">ROOM 2</button>
+    <button id="room3">ROOM 3</button>
+
+    <button id="redplayer">Choose Red</button>
+    <button id="blueplayer">Choose Blue</button>
+
     <ul id="events"></ul>
 
     <div class="button-wrapper">
@@ -18,10 +25,7 @@
     </div>
 
 
-    <div class="grid"></div>
-
-    <button id="room1">ROOM 1</button>
-
+    <div class="grid" id="grid"></div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
