displays room and color

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,12 @@
     </div>
 
 
+    <p>
+        COLOR: <span id="color"></span>
+    </p>
+    <p>
+        Room: <span id="room"></span>
+    </p>
     <div class="grid" id="grid"></div>
 </div>
 
