--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,21 @@
 <html lang="en">
 <head>
     <style>
-        h1 {text-align: center;}
+        h1 {
+            text-align: center;
+            color: blue;
+            font-family: verdana;
+            font-size: 300%;
+        }
+        p {
+            color: red;
+            font-family: courier;
+            font-size: 160%;
+        }
+        button{
+            color: red;
+            font-size: 200%;
+        }
     </style>
     <meta charset="UTF-8">
     <title>Gomoku (Connect 5)</title>
