implemented disconnection and create/join games

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,17 @@
     <!--<script src="src/app.js" charset="utf-8"></script>-->
 </head>
 <body>
+<form id="create-form">
+    <input id="input_create" />
+    <button id="create">Create</button>
+</form>
+
+<form id="join-form">
+    <input id="input_join" />
+    <button id="join">Join</button>
+</form>
+
+
 <div class="rps-wrapper">
     <button id="room1">ROOM 1</button>
     <button id="room2">ROOM 2</button>
