--- a/creategame1.html
+++ b/creategame1.html
@@ -5,7 +5,11 @@
     <title>Create Game</title>
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li><a href="menu.html">Menu</a></li>
+    </ul>
+</nav>
 <h2>Create Game</h2>
 
 <label for="fname">Enter Time Limit (Seconds):</label><br>
