--- a/joingame.html
+++ b/joingame.html
@@ -5,7 +5,11 @@
     <title>Join Game</title>
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li><a href="menu.html">Menu</a></li>
+    </ul>
+</nav>
 <h2>Join Game</h2>
 
 <label for="fname">Join Code:</label><br>
