--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,13 @@
     <title>Gomoku (Connect 5)</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="creategame1.html">Create Game</a></li>
+        <li><a href="joingame.html">Join Game</a></li>
+    </ul>
+</nav>
 <h1>Connect 5 (Gomoku)</h1>
 <button type="button">Play</button><br>
 <button type="button">Quit</button>
