--- a/client/game.html
+++ b/client/game.html
@@ -15,14 +15,14 @@
         }
         .grid{
             position:absolute;
-            left: 13px;
-            top: 490px;
+            left: 3.05%;
+            top: 84.4%;
         }
         img{
-            top: 420px;
-            left: 50px;
-            width: 610px;
-            height: 610px;
+            top: 100%;
+            left: 20%;
+            width: 52.78%;
+            height: 52.78%;
         }
     </style>
     <title>RPS</title>
