--- a/client/game.html
+++ b/client/game.html
@@ -60,7 +60,7 @@
     <br>
 </div>
 
-<br><br><button class="myGray" id="restart">Request Restart</button>
+<br><button class="myGray" id="restart">Request Restart</button>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="src/client.js"></script>
